--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "algobox",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An npm package that can help you to use famous algo in your coding",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Babur02/algobox_npm_package.git"
+    "url": "git+https://github.com/Babur02/algobox_npm_package.git"
   },
   "author": "Babar",
   "license": "ISC"
